CSS fixing in the menu -> active

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 			<h1 class="brand-text">Sans.</h1></a>
 		<nav class="w-nav-menu navigation-menu" role="navigation">
 			<a class="w-nav-link navigation-link" href="index.html">Work</a>
-			<a class="w-nav-link navigation-link w--current" href="about.html">About</a>
+			<a class="w-nav-link navigation-link active" href="about.html">About</a>
 		</nav>
 		<div class="w-nav-button hamburger-button">
 			<div class="w-icon-nav-menu"></div>
@@ -51,6 +51,8 @@
 		</div>
 		<div class="footer-text">&copy; Vera Sans — 2016<br/>All rights reserved</div>
 	</div>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/webflow.6a91f4eb8.js"></script>
 
 </body>
 </html>
