--- a/app.html
+++ b/app.html
@@ -27,7 +27,22 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="w-dyn-list">
+			<img src="img/app01.jpg">
+			<h1 class="photo-page-title">CHECKY</h1>
+				<div class="photo-info-text"></div>
+				<div class="w-richtext photo-text">
+					<p>CHECKY it's a mockup for an hypothetic app where you can check and compare the prices of various products of your choice, and to consult the price history of different providers.<br>You would be able to search and add new products to you product list, choose the currency that best fits your interests and choose the provider of the product.<br>On the menu you could see the statistics about the price of the contextualized product, news and the history of your search.
+					CHECKY would be available for Android and iOS.</p>
+			</div>
+			<img src="img/loading.gif" style="padding-top:30px">
+			<img id="imgleft" src="img/app02.jpg" style="padding-top:10px">
+			<img id="imgright" src="img/app03.jpg" style="padding-top:10px">
+		</div>
+	</div>
+			
+		<div class="w-container all-images">
+			<h1 class="photo-page-title">All Works</h1>
+			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="travel.html">
@@ -51,12 +66,6 @@
 						<a class="w-inline-block photo-link-block" href="VDF.html">
 							<img src="img/vodafoneLogo.jpg">
 							<div class="title">Smart Router App</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="app.html">
-							<img src="img/checky_square.jpg">
-							<div class="title">CHECKY</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
