--- a/boyfish.html
+++ b/boyfish.html
@@ -67,6 +67,12 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="app.html">
+							<img src="img/checky_square.jpg">
+							<div class="title">CHECKY</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="caterpillar.html">
 							<img src="img/caterpillar_square.jpg">
 							<div class="title">(My) Very Hungry Caterpillar</div>
