--- a/caterpillar.html
+++ b/caterpillar.html
@@ -69,6 +69,12 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="app.html">
+							<img src="img/checky_square.jpg">
+							<div class="title">CHECKY</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
 							<img src="img/boyfish_square.jpg">
 							<div class="title">The Boy and the Fish</div>
