--- a/travel.html
+++ b/travel.html
@@ -27,17 +27,17 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<img src="img/loveyou.jpg" title="Amsterdam, Netherlands">
+			<img src="img/amsterdam03.jpg" title="Amsterdam, Netherlands">
 			<h1 class="photo-page-title">Traveling</h1>
 				<div class="photo-info-text"></div>
 				<div class="w-richtext photo-text">
-					<p>Series of illustrations from the countries that I've visited in the past two years.<br>The illustrations
-						have photos that I took to food, textures, architecture, landscaping, and so on.</p>
+					<p>Series of illustrations from the countries that I've visited in the past two years.<br>The illustrations recreat moments that I've lived and shared on those countries.<br>On the background you can find photos that I've took to food, textures, architecture, landscaping; and the characters were drawn whith pen and market.</p>
 			</div>
-			<img src="img/cheese.jpg" title="Amsterdam, Netherlands" style="padding-top:30px">
-			<img src="img/waffle.jpg" title="Amsterdam, Netherlands" style="padding-top:10px">
+			<img src="img/amsterdam02.jpg" title="Amsterdam, Netherlands" style="padding-top:30px">
+			<img src="img/amsterdam.jpg" title="Amsterdam, Netherlands" style="padding-top:10px">
 			<img src="img/dubai.jpg" title="Dubai, UEA" style="padding-top:10px">
-			<img src="img/pizza.jpg" title="Milan, Italy" style="padding-top:10px">
+			<img src="img/bellagio.jpg" title="Bellagio, Italy" style="padding-top:10px">
+			<img src="img/genoa.jpg" title="Genoa, Italy" style="padding-top:10px">
 		</div>
 	</div>
 			
@@ -61,6 +61,12 @@
 						<a class="w-inline-block photo-link-block" href="VDF.html">
 							<img src="img/vodafoneLogo.jpg">
 							<div class="title">Smart Router App</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="app.html">
+							<img src="img/checky_square.jpg">
+							<div class="title">CHECKY</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
