changing profile picture again

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 	<div class="w-container">
 		<div class="w-row">
 			<div class="w-col w-col-6">
-				<img class="about-photo" src="img/perfil.jpg"></div>
+				<img class="about-photo" src="img/perfil.png"></div>
 				<div class="w-col w-col-6">
 					<div class="w-richtext">
 						<h2>SANS.</h2>
