--- a/app.html
+++ b/app.html
@@ -31,8 +31,7 @@
 			<h1 class="photo-page-title">CHECKY</h1>
 				<div class="photo-info-text"></div>
 				<div class="w-richtext photo-text">
-					<p>CHECKY it's a mockup for an hypothetic app where you can check and compare the prices of various products of your choice, and to consult the price history of different providers.<br>You would be able to search and add new products to you product list, choose the currency that best fits your interests and choose the provider of the product.<br>On the menu you could see the statistics about the price of the contextualized product, news and the history of your search.
-					CHECKY would be available for Android and iOS.</p>
+					<p>CHECKY it's a mockup for an hypothetic app where you can check and compare the prices of various products of your choice, and to consult the price history of different providers.<br>You would be able to search and add new products to you product list, choose the currency that best fits your interests and choose the provider of the product.<br>On the menu you could see the statistics about the price of the contextualized product, news and the history of your search.<br>CHECKY would be available for Android and iOS.</p>
 			</div>
 			<img src="img/loading.gif" style="padding-top:30px">
 			<img id="imgleft" src="img/app02.jpg" style="padding-top:10px">
@@ -48,6 +47,12 @@
 						<a class="w-inline-block photo-link-block" href="travel.html">
 							<img src="img/travel.jpg">
 							<div class="title">Traveling</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="trashr.html">
+							<img src="img/trashr_square.jpg">
+							<div class="title">TRASHR</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
