--- a/boyfish.html
+++ b/boyfish.html
@@ -49,6 +49,12 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="trashr.html">
+							<img src="img/trashr_square.jpg">
+							<div class="title">TRASHR</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="crua.html">
 							<img src="img/crua_square.jpg">
 							<div class="title">The act of the Hell's Ship</div>
