--- a/trashr.html
+++ b/trashr.html
@@ -31,14 +31,14 @@
 			<h1 class="photo-page-title">TRASHR</h1>
 				<div class="photo-info-text"></div>
 				<div class="w-richtext photo-text">
-					<p>TRASHR</p>
+					<p>TRASHR will be a platform to allow you to search for the gargabe disposal bins nearby. You will also be notified when the garbage truck is coming by, so you never miss a pick up again.<br> You will also be able to add new locations to your profile and help TRASHR with your contributions. Every user will play a very important role, by sugesting new garbage disposal locations while being rewarded with unlocked achivements, for a more fun experience.<br>Since the app will only be available for Android users in the begining, I've followed the Material Design Guidelines created by Google. I wanted TRASHR to have a nice user experience with a friendly, intuitive and simple interface.</p>
 			</div>
 			<img src="img/imgParaSite.gif" style="padding-top:30px">
 			<img id="imgleft" src="img/trashr02.jpg" style="padding-top:10px">
 			<img id="imgright" src="img/trashr03.jpg" style="padding-top:10px">
-			<img id="imgright" src="img/trashr04.jpg" style="padding-top:10px">
+			<img id="imgleft" src="img/trashr04.jpg" style="padding-top:10px">
 			<img id="imgright" src="img/trashr05.jpg" style="padding-top:10px">
-			<img id="imgright" src="img/trashr06.jpg" style="padding-top:10px">
+			<img id="imgleft" src="img/trashr06.jpg" style="padding-top:10px">
 			<img id="imgright" src="img/trashr07.jpg" style="padding-top:10px">
 		</div>
 	</div>
@@ -69,6 +69,12 @@
 						<a class="w-inline-block photo-link-block" href="VDF.html">
 							<img src="img/vodafoneLogo.jpg">
 							<div class="title">Smart Router App</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="app.html">
+							<img src="img/checky_square.jpg">
+							<div class="title">CHECKY</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
