--- a/crua.html
+++ b/crua.html
@@ -48,6 +48,12 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="trashr.html">
+							<img src="img/trashr_square.jpg">
+							<div class="title">TRASHR</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="montanha.html">
 							<img src="img/montanha_square.jpg">
 							<div class="title">Luís Montanha Webpage</div>
