testing download on Safari

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 			<h1 class="brand-text">Sans.</h1></a>
 		<nav class="w-nav-menu navigation-menu" role="navigation">
 			<a class="w-nav-link navigation-link" href="index.html">Work</a>
+			<a class="w-nav-link navigation-link" href="fun.html">Fun</a>
 			<a class="w-nav-link navigation-link active" href="about.html">About</a>
 		</nav>
 		<div class="w-nav-button hamburger-button">
@@ -28,11 +29,11 @@
 	<div class="w-container">
 		<div class="w-row">
 			<div class="w-col w-col-6">
-				<img class="about-photo" src="img/perfil.png"></div>
+				<img class="about-photo" src="img/perfil.jpg"></div>
 				<div class="w-col w-col-6">
 					<div class="w-richtext">
 						<h2>SANS.</h2>
-						<p>A web designer, illustrator & photography lover based in Oporto. <br><br>Since 2014 she has been part of several projects for Vodafone Portugal and du, an Emirates Integrated Telecommunications Company, in partnership with Apple.</p>
+						<p>A web designer, illustrator & photography lover. <br><br>I'm a 27 year old happy designer who goes by the name of Vera Sans, currently living in Oporto, Portugal. I’ve been working as a designer for the last seven years, collaborating with big companies such as Super Bock, Vodafone Portugal, du - a telco operator in Dubai and Apple.<br><br>To know more about the projects that I've been involved please visit my <a class="action-button" href="https://pt.linkedin.com/in/verasans" target="_blank" alt="Linkedin">Linkedin profile</a>, and you can also <a class="action-button" href="CV_VeraMartins.pdf" target="_blank" alt="CV">download my CV</a>.</p>
 					</div>
 				</div>
 			</div>
