--- a/index - Copy.html
+++ b/index - Copy.html
@@ -18,7 +18,6 @@
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
 				<a class="w-nav-link navigation-link active" href="index.html">Work</a>
-				<a class="w-nav-link navigation-link" href="fun.html">Fun</a>
 				<a class="w-nav-link navigation-link" href="about.html">About</a>
 		</nav>
 			<div class="w-nav-button hamburger-button">
@@ -28,20 +27,14 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<img src="img/HomeControl01.jpg">
-			<h1 class="photo-page-title">Smart Router | Vodafone PT App</h1>
-				<div class="w-richtext photo-text">
-					<p>The aim of this app is to simplify and dismitify basic configurations from everyday equipments used by the clients.<br>We wanted this app to be accessible to everyone. To be easy to use and interact with, and also simple and clean. An app that causes curiosity on its users and make them want to see what has changed after an update.</p>
-					<p><a href="http://www.vodafone.pt/main/particulares/apps/smart-router.htm" target="_blank" class="action-button">LAUNCH PROJECT FROM VODAFONE'S WEBSITE</a></p>
-				</div>
-			<img src="img/HomeControl02.jpg" style="padding-top:30px">
-		</div>
-	</div>
-
-		<div class="w-container all-images">
-			<h1 class="photo-page-title">All Works</h1>
-			<div class="w-dyn-list gallery-wrapper">
+			<div class="w-dyn-list">
 				<div class="w-dyn-items w-row">
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="travel.html">
+							<img src="img/travel.jpg">
+							<div class="title">Traveling</div>
+						</a>
+					</div>
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="trashr.html">
 							<img src="img/trashr_square.jpg">
@@ -61,9 +54,27 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="VDF.html">
+							<img src="img/vodafoneLogo.jpg">
+							<div class="title">Smart Router App</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="app.html">
+							<img src="img/checky_square.jpg">
+							<div class="title">CHECKY</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
 							<img src="img/boyfish_square.jpg">
 							<div class="title">The Boy and the Fish</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="caterpillar.html">
+							<img src="img/caterpillar_square.jpg">
+							<div class="title">(My) Very Hungry Caterpillar</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
@@ -71,7 +82,7 @@
 							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
 						</a>
-					</div>					
+					</div>
 				</div>
 			</div>
 		</div>
