--- a/soskit.html
+++ b/soskit.html
@@ -18,6 +18,7 @@
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
 				<a class="w-nav-link navigation-link active" href="index.html">Work</a>
+				<a class="w-nav-link navigation-link" href="fun.html">Fun</a>
 				<a class="w-nav-link navigation-link" href="about.html">About</a>
 		</nav>
 			<div class="w-nav-button hamburger-button">
@@ -44,12 +45,6 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="travel.html">
-							<img src="img/travel.jpg">
-							<div class="title">Traveling</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="trashr.html">
 							<img src="img/trashr_square.jpg">
 							<div class="title">TRASHR</div>
@@ -74,21 +69,9 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="app.html">
-							<img src="img/checky_square.jpg">
-							<div class="title">CHECKY</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="boyfish.html">
 							<img src="img/boyfish_square.jpg">
 							<div class="title">The Boy and the Fish</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="caterpillar.html">
-							<img src="img/caterpillar_square.jpg">
-							<div class="title">(My) Very Hungry Caterpillar</div>
 						</a>
 					</div>
 				</div>
