--- a/caterpillar.html
+++ b/caterpillar.html
@@ -46,6 +46,12 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="tobias.html">
+							<img src="img/tobias.jpg">
+							<div class="title">Tobias @ GAU</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="travel.html">
 							<img src="img/travel.jpg">
 							<div class="title">Traveling</div>
