--- a/tobias.html
+++ b/tobias.html
@@ -28,15 +28,14 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<img src="img/app01.jpg">
-			<h1 class="photo-page-title">CHECKY</h1>
-				<div class="photo-info-text"></div>
+			<img src="img/tobias01.jpg">
+			<h1 class="photo-page-title">Tobias @ GAU</h1>
 				<div class="w-richtext photo-text">
-					<p>CHECKY it's a mockup for an hypothetic app where you can check and compare the prices of various products of your choice, and to consult the price history of different providers.<br>You would be able to search and add new products to you product list, choose the currency that best fits your interests and choose the provider of the product.<br>On the menu you could see the statistics about the price of the contextualized product, news and the history of your search.<br>CHECKY would be available for Android and iOS.</p>
+					<p>Project for GAU (Urban Art Gallery). GAU is a space for creative freedom dedicated by the city of Lisbon to graffiti and street art.<br>This was my intervention for the 9th edition of "Reciclar o olhar | Recycling the look". I've used spray cans and markers, which are some of the materials that I like to work with the most.<br>See <a href="https://www.facebook.com/pg/galeriadearteurbana/photos/?tab=album&album_id=1141876792500110" target="_blank" class="action-button">here</a> more photos of all interventions from the 9th editon. You can find out more about GAU on their <a href="https://www.facebook.com/pg/galeriadearteurbana/about/" target="_blank" class="action-button">facebook page</a>. See <a href="https://www.facebook.com/galeriadearteurbana/photos/a.527914030563059.118305.221215817899550/533194116701717/?type=3&theater" target="_blank" class="action-button">here</a> the work of Carolina Quintinho, she intervented on the same bottle bank as I did but on the 5th edition. </p>
 			</div>
-			<img src="img/loading.gif" style="padding-top:30px">
-			<img id="imgleft" src="img/app02.jpg" style="padding-top:10px">
-			<img id="imgright" src="img/app03.jpg" style="padding-top:10px">
+			<img src="img/tobias02.jpg" style="padding-top:30px">
+			<img src="img/tobias03.jpg" style="padding-top:10px">
+			<img src="img/tobias04.jpg" style="padding-top:10px">
 		</div>
 	</div>
 			
@@ -45,15 +44,15 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="tobias.html">
-							<img src="img/tobias.jpg">
-							<div class="title">Tobias @ GAU</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="travel.html">
 							<img src="img/travel.jpg">
 							<div class="title">Traveling</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="app.html">
+							<img src="img/checky_square.jpg">
+							<div class="title">CHECKY</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
