--- a/travel.html
+++ b/travel.html
@@ -47,6 +47,12 @@
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="tobias.html">
+							<img src="img/tobias.jpg">
+							<div class="title">Tobias @ GAU</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="app.html">
 							<img src="img/checky_square.jpg">
 							<div class="title">CHECKY</div>
