stuff i'm working on

--- a/trevo.html
+++ b/trevo.html
@@ -28,7 +28,18 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="w-dyn-list">
+			<img src="img/trevo.jpg">
+			<h1 class="photo-page-title">TREVO</br>events and design</h1>
+				<div class="w-richtext photo-text">
+					<p>Designing and building the site for TREVO events design. You will see a lot of cute and gorgeous stuff.<br>TREVO designs fully customized and creative solutions for events. They design all the accessories according to the concept of the event, available budget and personality of each client.<br>To find out more about TREVO, visit their <a href="https://www.facebook.com/trevoevents/" target="_blank" class="action-button">facebook page</a>.</p>
+					<!--<p><a href="http://orapazeopeixe.wordpress.com/" target="_blank" class="action-button">LAUNCH PROJECT</a></p>-->
+				</div>
+			</div>
+	</div>
+
+		<div class="w-container all-images">
+			<h1 class="photo-page-title">All Works</h1>
+			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="trashr.html">
@@ -55,36 +66,9 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.jpg">
-							<div class="title">The Boy and the Fish</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="soskit.html">
 							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="w-section section">
-		<h1 class="photo-page-title">Stuff I'm Working on</h1>
-		<div class="w-container">
-			<div class="w-dyn-list">
-				<div class="w-dyn-items w-row">
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="trevo.html">
-							<img src="img/uc.jpg">
-							<div class="title">TREVO events design</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="winelabel.html">
-							<img src="img/uc.jpg">
-							<div class="title">Wine label</div>
 						</a>
 					</div>
 				</div>
