--- a/winelabel.html
+++ b/winelabel.html
@@ -28,7 +28,19 @@
 	</div>
 	<div class="w-section section">
 		<div class="w-container">
-			<div class="w-dyn-list">
+			<!--<img src="img/boyfishfamily.jpg">-->
+			<h1 class="photo-page-title">Wine brand</h1>
+				<div class="w-richtext photo-text">
+					<p>I'm creating the brand for a small local winery based in Douro.<br>This will consist in a wine bottle label and a logo.</p>
+				</div>
+			<!--<img src="img/boyfishAshes.jpg" style="padding-top:30px">
+			<img src="img/boyfishNecklace.jpg" style="padding-top:10px">-->
+		</div>
+	</div>
+
+		<div class="w-container all-images">
+			<h1 class="photo-page-title">All Works</h1>
+			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="trashr.html">
@@ -55,36 +67,9 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.jpg">
-							<div class="title">The Boy and the Fish</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="soskit.html">
 							<img src="img/soskit_square.jpg">
 							<div class="title">S.O.S dyslexia kit - for parents and children</div>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="w-section section">
-		<h1 class="photo-page-title">Stuff I'm Working on</h1>
-		<div class="w-container">
-			<div class="w-dyn-list">
-				<div class="w-dyn-items w-row">
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="trevo.html">
-							<img src="img/uc.jpg">
-							<div class="title">TREVO events design</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="winelabel.html">
-							<img src="img/uc.jpg">
-							<div class="title">Wine label</div>
 						</a>
 					</div>
 				</div>
