--- a/about.html
+++ b/about.html
@@ -16,8 +16,9 @@
 			<a class="w-nav-brand brand-link" href="index.html">
 			<h1 class="brand-text">Sans.</h1></a>
 		<nav class="w-nav-menu navigation-menu" role="navigation">
-			<a class="w-nav-link navigation-link" href="index.html">Work</a>
-			<a class="w-nav-link navigation-link" href="fun.html">Fun</a>
+			<a class="w-nav-link navigation-link" href="index.html">UX&UI</a>
+				<a class="w-nav-link navigation-link" href="graphics.html">graphic design</a>
+				<a class="w-nav-link navigation-link" href="illustration.html">illustration</a>
 			<a class="w-nav-link navigation-link active" href="about.html">About</a>
 		</nav>
 		<div class="w-nav-button hamburger-button">
