--- a/caterpillar.html
+++ b/caterpillar.html
@@ -17,9 +17,10 @@
 				<h1 class="brand-text">Sans.</h1>
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
-				<a class="w-nav-link navigation-link" href="index.html">Work</a>
-				<a class="w-nav-link navigation-link active" href="fun.html">Fun</a>
-				<a class="w-nav-link navigation-link" href="about.html">About</a>
+				<a class="w-nav-link navigation-link" href="index.html">UX&UI</a>
+				<a class="w-nav-link navigation-link active" href="graphics.html">graphic design</a>
+				<a class="w-nav-link navigation-link" href="illustration.html">illustration</a>
+				<a class="w-nav-link navigation-link" href="about.html">about</a>
 		</nav>
 			<div class="w-nav-button hamburger-button">
 				<div class="w-icon-nav-menu"></div>
@@ -42,25 +43,13 @@
 	</div>
 
 		<div class="w-container all-images">
-			<h1 class="photo-page-title">All Works</h1>
+			<h1 class="photo-page-title">More Works</h1>
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="tobias.html">
-							<img src="img/tobias.jpg">
-							<div class="title">Tobias @ GAU</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="travel.html">
-							<img src="img/travel.jpg">
-							<div class="title">Traveling</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="app.html">
-							<img src="img/checky_square.jpg">
-							<div class="title">CHECKY</div>
+						<a class="w-inline-block photo-link-block" href="soskit.html">
+							<img src="img/soskit_square.jpg">
+							<div class="title">S.O.S dyslexia kit - for parents and children</div>
 						</a>
 					</div>
 				</div>
