--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 				<h1 class="brand-text">Sans.</h1>
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
-				<a class="w-nav-link navigation-link active" href="index.html">Work</a>
-				<a class="w-nav-link navigation-link" href="fun.html">Fun</a>
-				<a class="w-nav-link navigation-link" href="about.html">About</a>
+				<a class="w-nav-link navigation-link active" href="index.html">UX&UI</a>
+				<a class="w-nav-link navigation-link" href="graphics.html">graphic design</a>
+				<a class="w-nav-link navigation-link" href="illustration.html">illustration</a>
+				<a class="w-nav-link navigation-link" href="about.html">about</a>
 		</nav>
 			<div class="w-nav-button hamburger-button">
 				<div class="w-icon-nav-menu"></div>
@@ -31,39 +32,27 @@
 			<div class="w-dyn-list">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="trashr.html">
-							<img src="img/trashr_square.jpg">
-							<div class="title">TRASHR</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="crua.html">
-							<img src="img/crua_square.jpg">
-							<div class="title">The act of the Hell's Ship</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="montanha.html">
-							<img src="img/montanha_square.jpg">
-							<div class="title">Luís Montanha Webpage</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
 						<a class="w-inline-block photo-link-block" href="VDF.html">
 							<img src="img/vodafoneLogo.jpg">
 							<div class="title">Smart Router App</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="boyfish.html">
-							<img src="img/boyfish_square.jpg">
-							<div class="title">The Boy and the Fish</div>
+						<a class="w-inline-block photo-link-block" href="trashr.html">
+							<img src="img/trashr_square.jpg">
+							<div class="title">TRASHR</div>
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="soskit.html">
-							<img src="img/soskit_square.jpg">
-							<div class="title">S.O.S dyslexia kit - for parents and children</div>
+						<a class="w-inline-block photo-link-block" href="app.html">
+							<img src="img/checky_square.jpg">
+							<div class="title">CHECKY</div>
+						</a>
+					</div>
+					<div class="w-dyn-item w-col w-col-4">
+						<a class="w-inline-block photo-link-block" href="montanha.html">
+							<img src="img/montanha_square.jpg">
+							<div class="title">Luís Montanha Webpage</div>
 						</a>
 					</div>
 				</div>
@@ -79,12 +68,6 @@
 						<a class="w-inline-block photo-link-block" href="trevo.html">
 							<img src="img/uc.jpg">
 							<div class="title">TREVO events design</div>
-						</a>
-					</div>
-					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="winelabel.html">
-							<img src="img/uc.jpg">
-							<div class="title">Wine label</div>
 						</a>
 					</div>
 				</div>
