--- a/tobias.html
+++ b/tobias.html
@@ -17,9 +17,10 @@
 				<h1 class="brand-text">Sans.</h1>
 			</a>
 			<nav class="w-nav-menu navigation-menu" role="navigation">
-				<a class="w-nav-link navigation-link" href="index.html">Work</a>
-				<a class="w-nav-link navigation-link active" href="fun.html">Fun</a>
-				<a class="w-nav-link navigation-link" href="about.html">About</a>
+				<a class="w-nav-link navigation-link" href="index.html">UX&UI</a>
+				<a class="w-nav-link navigation-link" href="graphics.html">graphic design</a>
+				<a class="w-nav-link navigation-link active" href="illustration.html">illustration</a>
+				<a class="w-nav-link navigation-link" href="about.html">about</a>
 		</nav>
 			<div class="w-nav-button hamburger-button">
 				<div class="w-icon-nav-menu"></div>
@@ -40,7 +41,7 @@
 	</div>
 			
 		<div class="w-container all-images">
-			<h1 class="photo-page-title">All Works</h1>
+			<h1 class="photo-page-title">More Works</h1>
 			<div class="w-dyn-list gallery-wrapper">
 				<div class="w-dyn-items w-row">
 					<div class="w-dyn-item w-col w-col-4">
@@ -50,15 +51,15 @@
 						</a>
 					</div>
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="app.html">
-							<img src="img/checky_square.jpg">
-							<div class="title">CHECKY</div>
+						<a class="w-inline-block photo-link-block" href="crua.html">
+							<img src="img/crua_square.jpg">
+							<div class="title">The act of the Hell's Ship</div>
 						</a>
-					</div>
+					</div>					
 					<div class="w-dyn-item w-col w-col-4">
-						<a class="w-inline-block photo-link-block" href="caterpillar.html">
-							<img src="img/caterpillar_square.jpg">
-							<div class="title">(My) Very Hungry Caterpillar</div>
+						<a class="w-inline-block photo-link-block" href="boyfish.html">
+							<img src="img/boyfish_square.jpg">
+							<div class="title">The Boy and the Fish</div>
 						</a>
 					</div>
 				</div>
