UI and performance
css for headers and more projects' links; image size test on Tobias

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="section main">
 		<div class="w-dyn-list">
 			<div class="w-dyn-items">
-				<div class="wrapper w-dyn-item">
+				<div class="wrapper w-dyn-item nm">
 					<div style="background-image:url(img/appsdm.png)" class="column background-image">
 						<div class="column _100vh">
 							<div class="project-info">
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="wrapper w-dyn-item">
+				<div class="wrapper w-dyn-item nm">
 					<div style="background-image:url(img/vex404.png)" class="column background-image">
 						<div class="column _100vh">
 							<div class="project-info">
