--- a/projects/404.html
+++ b/projects/404.html
@@ -26,7 +26,7 @@
 			<div class="_w-title">
 				<div class="_w-h1">
 					<h1 class="main-h1">Error Pages</h1>
-					<h2 class="main-h2">that reduce Customer Service time</h2>
+					<h2 class="main-h2" style="margin-top: 0px;">that reduce Customer Service time</h2>
 					<div class="div-block-18">
 						<p class="paragraph-2"><strong>Client: </strong>Vente-Exclusive</br><strong>Location: </strong>Brussels, Belgium</br><strong>Date: </strong>2018</p>
 					</div>
