about + images size test
Page about was added and auto da barca do inferno and around the world have some new images sizes and extensions to improve performance

--- a/playground/barcainferno.html
+++ b/playground/barcainferno.html
@@ -38,14 +38,14 @@
 					<p>Illustration for CRUA Mag a Portuguese online magazine. The illustration came out on issue No.2 whose theme was "Vade Retro Satana".<br><br>The illustration supports an excerpt from the book "O Auto da Barca do Inferno" (The act of the Hell's Ship) from the "Trilogia das Barcas" (Trilogy of the Ships). Written by Gil Vicente, consists on three plays, Auto da Barca do Inferno ("Act of the Hell's Ship"), written 1516; Auto da Barca do Purgatório ("Act of the Purgatory's Ship"), written in 1518; and Auto da Barca da Glória ("Auto of Heaven's Ship"), written in 1519. These plays combine morality narratives with criticism of 16th-century Portuguese society by placing stereotypical characters on a dock to await the arrival of one of the ships which will take them to their eternal destination.</p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/playg/bi/bi02.png" alt="illustration on the cover of the maganize">
+							<img src="../img/playg/bi/bi02.jpg" alt="illustration on the cover of the maganize">
 							<h5>the cover</h5>
 						</div>
 					</figure>
 					<p>I wanted something minimal that would fit the generic idea of the devil figure. The devil needed to be the main figure because...well, it’s the “Hell’s ship” 😈<br><br>I went for a watercolour illustration because this allowed me to be more expressive with the brush drops. I didn’t want to have a hard outlined illustration but a more open to interpretation kind. So this was the middle ground. You can understand the figure from the brush drops and together with the title of the magazine, you immediately understand the what and the why.</p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/playg/bi/bi01.png" alt="goat representation with magenta colour">
+							<img src="../img/playg/bi/bi01.jpg" alt="goat representation with magenta colour">
 							<h5>watercolour illustration</h5>
 						</div>
 					</figure>
