--- a/playground.html
+++ b/playground.html
@@ -33,7 +33,7 @@
 					</div>
 					<div class="w-w-col w-w-col-4">
 						<a class="w-w-inline-block w-photo-link-block" href="playground/barcainferno.html">
-							<img src="img/playg/bi.png">
+							<img src="img/playg/bi.jpg">
 							<div class="w-title">O Auto da Barca do Inferno</div>
 						</a>
 					</div>
