final images + about + baf
all images changed to the final desired size and updated links to the about page. switch from around the world to boy and the fish

--- a/playground/tobias.html
+++ b/playground/tobias.html
@@ -19,7 +19,7 @@
 			<nav role="navigation" class="nav-menu w-nav-menu">
 				<a href="../index.html" class="link-nav w-nav-link">Projects</a>
 				<a href="../playground.html" class="link-nav w-nav-link" style="color: #1F4087;">Playground</a>
-				<!--<a href="/about" class="link-nav w-nav-link">About</a>-->
+				<a href="../about.html" class="link-nav w-nav-link">About</a>
 			</nav>
 		</div>
 		<div class="main-section">
@@ -36,33 +36,33 @@
 					<br>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/playg/tobias/01.png" alt="several photos that give a general overview of the process">
+							<img src="../img/playg/tobias/01.jpg" alt="several photos that give a general overview of the process">
 							<h5>overview of the process</h5>
 						</div>
 					</figure>
 					<p>Project for GAU (Urban Art Gallery). GAU is a space for creative freedom dedicated by the city of Lisbon to graffiti and street art.<br><br>This was my intervention for the 9th edition of "Reciclar o olhar | A recycled look". I've used spray cans and markers, which are some of the materials that I like to work with the most on outdoor interventions.<br><br><a href="https://www.facebook.com/pg/galeriadearteurbana/about/" target="_blank">See more photos of all interventions from the 9th edition</a>. You can find out more about GAU on <a href="https://www.facebook.com/pg/galeriadearteurbana/about/" target="_blank">their Facebook page</a>. And see <a href="https://www.facebook.com/galeriadearteurbana/photos/a.527914030563059/533194116701717/?type=3&theater" target="_blank">the work of Carolina Quintinho</a>, she intervented on the same glass recycling bin as I did but on the 5th edition.<br><br>I really like origami. I always try to do some fancy thing with napkins for special occasions. I do little Santas on Christmas, to spread around the house. And of course, when I see some tutorial on Pinterest I always have to try it out … 🙈<br>So, when coming up with a concept for this intervention I immediately thought that origami and recycling were related. I mean, origami is giving a new life to a sheet of paper after all,right? 🤓<br></p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/playg/tobias/00.png" alt="sketches with Tobias character iterations">
+							<img src="../img/playg/tobias/00.jpg" alt="sketches with Tobias character iterations">
 							<h5>sketches</h5>
 						</div>
 					</figure>
 					<p>The idea is that Tobias is getting rid of some old bottles on one side and on the other side new nature shaped life is popping out.<br>I used a lot of bright colours because I wanted to make people smile when passing by, I wanted to give a good feeling to the street even on rainy days, when you really need to go to the bottle bank...and you really really don’t want to… 🌈</p><br>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/playg/tobias/02.png" alt="sketching and cover up">
+							<img src="../img/playg/tobias/02.jpg" alt="sketching and cover up">
 							<h5>step 1: sketching and cover up</h5>
 						</div>
 					</figure>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/playg/tobias/03.png" alt="characters start to take shape">
+							<img src="../img/playg/tobias/03.jpg" alt="characters start to take shape">
 							<h5>step 2: colours</h5>
 						</div>
 					</figure>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/playg/tobias/04.png" alt="final result">
+							<img src="../img/playg/tobias/04.jpg" alt="final result">
 							<h5>step 3: the outline</h5>
 						</div>
 					</figure>
@@ -79,7 +79,7 @@
 						<a href="barcainferno.html" class="big-link">O Auto da Barca do Inferno</a>
 					</div>
 					<div class="w-dyn-item">
-						<a href="around.html" class="big-link">Around the World</a>
+						<a href="baf.html" class="big-link">O Rapaz e o Peixe</a>
 					</div>
 				</div>
 			</div>
