--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<nav role="navigation" class="nav-menu w-nav-menu">
 				<a href="index.html" class="link-nav w-nav-link w--current">Projects</a>
 				<a href="playground.html" class="link-nav w-nav-link">Playground</a>
-				<!--<a href="/about" class="link-nav w-nav-link">About</a>-->
+				<a href="about.html" class="link-nav w-nav-link">About</a>
 			</nav>
 		</div>
 	<div class="hero">
