--- a/playground.html
+++ b/playground.html
@@ -19,7 +19,7 @@
 			<nav role="navigation" class="nav-menu w-nav-menu">
 				<a href="index.html" class="link-nav w-nav-link">Projects</a>
 				<a href="playground.html" class="link-nav w-nav-link w--current">Playground</a>
-				<!--<a href="/about" class="link-nav w-nav-link">About</a>-->
+				<a href="about.html" class="link-nav w-nav-link">About</a>
 			</nav>
 		</div>
 		<div class="w-section">
@@ -27,7 +27,7 @@
 				<div class="w-w-row">
 					<div class="w-w-col w-w-col-4">
 						<a class="w-w-inline-block w-photo-link-block" href="playground/tobias.html">
-							<img src="img/playg/tobias.png">
+							<img src="img/playg/tobias.jpg">
 							<div class="w-title">Tobias @ GAU</div>
 						</a>
 					</div>
@@ -37,10 +37,16 @@
 							<div class="w-title">O Auto da Barca do Inferno</div>
 						</a>
 					</div>
-					<div class="w-w-col w-w-col-4">
+					<!--<div class="w-w-col w-w-col-4">
 						<a class="w-w-inline-block w-photo-link-block" href="playground/around.html">
-							<img src="img/playg/around.png">
+							<img src="img/playg/around.jpg">
 							<div class="w-title">Around the World</div>
+						</a>
+					</div>-->
+					<div class="w-w-col w-w-col-4">
+						<a class="w-w-inline-block w-photo-link-block" href="playground/baf.html">
+							<img src="img/playg/baf.jpg">
+							<div class="w-title">O Rapaz e o Peixe</div>
 						</a>
 					</div>
 				</div>
