--- a/playground/barcainferno.html
+++ b/playground/barcainferno.html
@@ -19,7 +19,7 @@
 			<nav role="navigation" class="nav-menu w-nav-menu">
 				<a href="../index.html" class="link-nav w-nav-link">Projects</a>
 				<a href="../playground.html" class="link-nav w-nav-link" style="color: #1F4087;">Playground</a>
-				<!--<a href="/about" class="link-nav w-nav-link">About</a>-->
+				<a href="../about.html" class="link-nav w-nav-link">About</a>
 			</nav>
 		</div>
 		<div class="main-section">
@@ -60,7 +60,7 @@
 						<a href="tobias.html" class="big-link">Tobias @ GAU</a>
 					</div>
 					<div class="w-dyn-item">
-						<a href="around.html" class="big-link">Around the World</a>
+						<a href="baf.html" class="big-link">O Rapaz e o Peixe</a>
 					</div>
 				</div>
 			</div>
