--- a/projects/404.html
+++ b/projects/404.html
@@ -19,7 +19,7 @@
 			<nav role="navigation" class="nav-menu w-nav-menu">
 				<a href="../index.html" class="link-nav w-nav-link" style="color: #1F4087;">Projects</a>
 				<a href="../playground.html" class="link-nav w-nav-link">Playground</a>
-				<!--<a href="../about.html" class="link-nav w-nav-link">About</a>-->
+				<a href="../about.html" class="link-nav w-nav-link">About</a>
 			</nav>
 		</div>
 		<div class="main-section">
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 					<div class="column background-image">
-						<img src="../img/vex404/hero.png" alt="the background of the image is in their official purple. Aligned to the left we read 'We are working on it' and next to it we have a white outlined jellyfish with a construction worker's hat writing on a keyboard">
+						<img src="../img/vex404/hero.jpg" alt="the background of the image is in their official purple. Aligned to the left we read 'We are working on it' and next to it we have a white outlined jellyfish with a construction worker's hat writing on a keyboard">
 					</div>
 			<div class="proj_body-wrap">
 				<div class="proj_body w-richtext">
@@ -50,7 +50,7 @@
 					<p>I joined the company at the beginning of a major rebranding but all the big decisions regarding brand guidelines had already been made.<br><br>Working with a predefined brand identity was a bit of challenge accessibility wise, but still, the goal was to have a final product that would allow equal access and capabilities to everyone.</p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/vex404/01.png" alt="the three main brand colours that were used through out this project. VEX Purple, VEX Pink and VEX Gold">
+							<img src="../img/vex404/01.jpg" alt="the three main brand colours that were used through out this project. VEX Purple, VEX Pink and VEX Gold">
 							<h5>brand colours</h5>
 						</div>
 					</figure>
@@ -58,7 +58,7 @@
 					<p>We decided to tackle the error messages with positivity and clear sentences in order to provide the context of the error to the user on a more customized experience.</p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/vex404/02.png" alt="examples of 404 pages using ghosts' white outlined illustrations">
+							<img src="../img/vex404/02.jpg" alt="examples of 404 pages using ghosts' white outlined illustrations">
 							<h5>404</h5>
 						</div>
 					</figure>
@@ -66,7 +66,7 @@
 					<p>We tried to create fun engaging characters and activities to try to reduce stress and switch the focus from the errors. Whenever applicable we always provided navigational hints.</p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/vex404/03.png" alt="purple outlined illustration of a ghost with two speech bubbles explaining that the web-shop will be back soon">
+							<img src="../img/vex404/03.jpg" alt="purple outlined illustration of a ghost with two speech bubbles explaining that the web-shop will be back soon">
 							<h5>maintenance</h5>
 						</div>
 					</figure>
@@ -74,7 +74,7 @@
 					<p>Empty states and error pages can also be used to amplify business opportunities, so that’s what we did 💪! By promoting the company’s Instagram page through a #hashtag. This was very important for the marketing team because, at the time, VEX was starting to create a presence on social media.</p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
-							<img src="../img/vex404/04.png" alt="idea for the customers to create origami bananas while they wait for the web-shop to be back up running again">
+							<img src="../img/vex404/04.jpg" alt="idea for the customers to create origami bananas while they wait for the web-shop to be back up running again">
 							<h5>bugs...</h5>
 						</div>
 					</figure>
