--- a/projects/appdm.html
+++ b/projects/appdm.html
@@ -19,7 +19,7 @@
 			<nav role="navigation" class="nav-menu w-nav-menu">
 				<a href="../index.html" class="link-nav w-nav-link" style="color: #1F4087;">Projects</a>
 				<a href="../playground.html" class="link-nav w-nav-link">Playground</a>
-				<!--<a href="../about.html" class="link-nav w-nav-link">About</a>-->
+				<a href="../about.html" class="link-nav w-nav-link">About</a>
 			</nav>
 		</div>
 		<div class="main-section">
