--- a/projects/404.html
+++ b/projects/404.html
@@ -54,8 +54,9 @@
 							<h5>brand colours</h5>
 						</div>
 					</figure>
-					<h2 class="main-h2">What we came up with</h2>
-					<p>We decided to tackle the error messages with positivity and clear sentences in order to provide the context of the error to the user on a more customized experience.</p>
+					<h2 class="main-h2">High-level process</h2>
+					<p>Since I was helping out the Marketing department as a web and second graphic designer one-day per week, I knew they had some initiatives going on to increase our young adult audience. Here I saw an opportunity for a great collaboration between departments because I wanted our users to engage with the error messages. The goal was to not lose users during these errors since we knew they were often solved very quickly. So I wanted to have some sort of engaging activity to keep them on the website until the page would refresh allowing them to go back to browsing the webshop.<br><br>
+					We decided to tackle the error messages with positivity and clear sentences in order to provide the context of the error to the user on a more customized experience. </p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
 							<img src="../img/vex404/02.jpg" alt="examples of 404 pages using ghosts' white outlined illustrations">
@@ -63,7 +64,7 @@
 						</div>
 					</figure>
 					<br>
-					<p>We tried to create fun engaging characters and activities to try to reduce stress and switch the focus from the errors. Whenever applicable we always provided navigational hints.</p>
+					<p>We tried to create fun engaging characters and activities, origami in these examples, to try to reduce stress and switch the focus from the errors. Whenever applicable we always provided navigational hints to avoid users feeling lost or frustrated.</p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
 							<img src="../img/vex404/03.jpg" alt="purple outlined illustration of a ghost with two speech bubbles explaining that the web-shop will be back soon">
@@ -71,7 +72,7 @@
 						</div>
 					</figure>
 					<br>
-					<p>Empty states and error pages can also be used to amplify business opportunities, so that’s what we did 💪! By promoting the company’s Instagram page through a #hashtag. This was very important for the marketing team because, at the time, VEX was starting to create a presence on social media.</p>
+					<p>Empty states and error pages can be used to amplify business opportunities, so that’s what we did by promoting the company’s Instagram page through a #hashtag. 💪 This was very important for the marketing team because, at the time, VEX was starting to create a presence on social media making any extra influx of traffic more than welcome...</p>
 					<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 						<div>
 							<img src="../img/vex404/04.jpg" alt="idea for the customers to create origami bananas while they wait for the web-shop to be back up running again">
