--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 --- 
-layout: default
+layout: about
 active: about
 ---
 
@@ -9,7 +9,7 @@ active: about
         <div class="project-info head w-col-6">
             <h2 class="h2 black">Hello there!</h2>
             <p class="paragraph bolder" style="font-size: 26px;
-line-height: 50px;">I’m Vera, Portuguese designer now based in <span style="text-decoration: line-through;">Dubai,</span> <span style="text-decoration: line-through;">Porto,</span> Leuven, Belgium.<br>UX and UI designer by day, illustrator and mobile photographer by night.<br>I also love to travel, I like to get into different cultures and mindsets and understand why, sometimes, the same things can be so different depending on its surroundings.<br>I’m an advocate for inclusive and accessible design, I believe that everyone should have the same experience regardless of their needs, information, guidance and context.</p>
+line-height: 50px;">I’m Vera, Portuguese designer now based in <span style="text-decoration: line-through;">Porto,</span> <span style="text-decoration: line-through;">Dubai,</span> Leuven, Belgium.<br>Product designer by day, illustrator and mobile photographer (aren't we all 🤓) every change I get.<br>I love to wander around the world, get into different cultures and mindsets. Understand why, sometimes, the same thing can be so different depending on its surroundings.<br>I’m an advocate for inclusive and accessible design, I believe that everyone should have the same experience regardless of their needs, information, guidance and context.</p>
         </div>
     </div>
 </div>
